@@ -222,7 +222,6 @@ impl_ConfigDatabase_set(PortableServer_Servant servant,
                         CORBA_Environment * ev)
 {
   GConfDatabase *db = (GConfDatabase*) servant;
-  gchar* str;
   GConfValue* val;
   GError* error = NULL;
 
@@ -243,15 +242,16 @@ impl_ConfigDatabase_set(PortableServer_Servant servant,
       return;
     }
       
-  str = gconf_value_to_string(val);
-
 #if 0
-  /* reduce traffice to the logfile */
-  gconf_log(GCL_DEBUG, "Received request to set key `%s' to `%s'", key, str);
-#endif
-  
-  g_free(str);
+  {
+    gchar* str = gconf_value_to_string(val);
 
+    /* reduce traffice to the logfile */
+    gconf_log(GCL_DEBUG, "Received request to set key `%s' to `%s'", key, str);
+
+    g_free(str);
+  }
+#endif
   
   gconf_database_set(db, key, val, value, &error);
 
